@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4348 2024/10/14 07:34:32 wiz Exp $
+# $NetBSD: Makefile,v 1.4349 2024/10/14 07:35:58 wiz Exp $
 #
 
 COMMENT=	Development utilities
@@ -2765,7 +2765,6 @@ SUBDIR+=	py-nihtest
 SUBDIR+=	py-ninja
 SUBDIR+=	py-nose
 SUBDIR+=	py-nose2
-SUBDIR+=	py-nosexcover
 SUBDIR+=	py-ode
 SUBDIR+=	py-olefile
 SUBDIR+=	py-open-vcdiff
