@@ -1,22 +1,0 @@
-# $NetBSD: Makefile,v 1.6 2024/04/30 14:15:39 wiz Exp $
-
-DISTNAME=	nosexcover-1.0.11
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-PKGREVISION=	2
-CATEGORIES=	devel python
-MASTER_SITES=	${MASTER_SITE_PYPI:=n/nosexcover/}
-
-MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	https://github.com/cmheisel/nose-xcover/
-COMMENT=	Extends nose.plugins.cover to add Cobertura-style XML reports
-LICENSE=	mit
-
-TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
-TOOL_DEPENDS+=	${PYPKGPREFIX}-wheel-[0-9]*:../../devel/py-wheel
-DEPENDS+=	${PYPKGPREFIX}-coverage-[0-9]*:../../devel/py-coverage
-DEPENDS+=	${PYPKGPREFIX}-nose-[0-9]*:../../devel/py-nose
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
-
-.include "../../lang/python/wheel.mk"
-.include "../../mk/bsd.pkg.mk"
