@@ -1,15 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2024/04/30 14:15:39 wiz Exp $
-${PYSITELIB}/${WHEEL_INFODIR}/METADATA
-${PYSITELIB}/${WHEEL_INFODIR}/RECORD
-${PYSITELIB}/${WHEEL_INFODIR}/WHEEL
-${PYSITELIB}/${WHEEL_INFODIR}/entry_points.txt
-${PYSITELIB}/${WHEEL_INFODIR}/top_level.txt
-${PYSITELIB}/nosexcover/__init__.py
-${PYSITELIB}/nosexcover/__init__.pyc
-${PYSITELIB}/nosexcover/__init__.pyo
-${PYSITELIB}/nosexcover/nosexcover.py
-${PYSITELIB}/nosexcover/nosexcover.pyc
-${PYSITELIB}/nosexcover/nosexcover.pyo
-${PYSITELIB}/nosexcover/tests.py
-${PYSITELIB}/nosexcover/tests.pyc
-${PYSITELIB}/nosexcover/tests.pyo
